<resources>
    <string name="app_name">Weather Assistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_browsing">天气</string>
    <string name="joke">笑话</string>
    <string name="person">我的</string>
    <string name="weather_detail">天气详情</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="temperature">26~37</string>
    <string name="temperature_units">℃</string>
    <string name="sunny">晴</string>
    <string name="sensible_temperature">体感温度</string>
    <string name="text_sensible_temperature">33℃</string>
    <string name="rainfall_probability">降水概率</string>
    <string name="_25">25%</string>
    <string name="precipitation">降雨量</string>
    <string name="_0_0mm">0.0mm</string>
    <string name="air_quality">空气质量</string>
    <string name="good">良</string>
    <string name="_49">49%</string>
    <string name="cloud_cover">云量</string>
    <string name="uv_health_grade">4级 不健康</string>
    <string name="uv">紫外线</string>
    <string name="_4">4级</string>
    <string name="wind_direction_night">东南偏东阵风</string>
    <string name="_1">1级</string>
    <string name="wind_direction_day">东南风</string>
    <string name="summer_dress">盛夏装</string>
    <string name="string_dress_tips">天气炎热，建议着短袖、短裤、薄型T恤衫等清凉夏季服装。</string>
    <string name="beibei_area">北碚区</string>
    <string name="living_detail">生活详情</string>
    <string name="air_conditioner">空调</string>
    <string name="long_time_turn_on">长时间开启</string>
    <string name="irritability">过敏</string>
    <string name="seldom">不宜发</string>
    <string name="flu">感冒</string>
    <string name="few">少发</string>
    <string name="fish">垂钓</string>
    <string name="not_suggest">不宜</string>
    <string name="wish_car">洗车</string>
    <string name="fine">较适宜</string>
    <string name="sport">运动</string>
    <string name="not_better_suggest">较不宜</string>
    <string name="take_umbrella">带伞</string>
    <string name="not_take_umbrella">不带伞</string>
    <string name="comfort_level">舒适度</string>
    <string name="very_uncomfortable">很不舒服</string>
    <string name="city_select">城市搜索</string>
    <string name="select_city">搜索城市</string>
    <string name="city_display">北碚区-重庆市-中国</string>
    <string name="city_text">%s-%s-%s</string>
    <string name="joke_title">开心一刻</string>
</resources>