<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/ic_arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left_forbid"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="08月14日"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ic_arrow_left"
            app:layout_constraintLeft_toRightOf="@+id/ic_arrow_left"
            app:layout_constraintTop_toTopOf="@+id/ic_arrow_left" />

        <ImageView
            android:id="@+id/ic_arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/date_text_view"
            app:layout_constraintLeft_toRightOf="@+id/date_text_view"
            app:layout_constraintTop_toTopOf="@+id/date_text_view" />

        <ImageView
            android:id="@+id/ic_chevron_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/area_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="北碚区"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ic_chevron_right"
            app:layout_constraintRight_toLeftOf="@id/ic_chevron_right"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_arrow_left" />

        <RadioGroup
            android:id="@+id/radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_button_day"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_view">

            <RadioButton
                android:id="@+id/radio_button_day"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:background="@drawable/custom_button_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/day"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_button_night"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_button_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/night"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/temperature"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_button" />

        <TextView
            android:id="@+id/temperature_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_units"
            android:textColor="@color/gray_300"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@+id/tv_temperature"
            app:layout_constraintTop_toTopOf="@+id/tv_temperature" />

        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_partly_cloudy"
            app:layout_constraintBottom_toTopOf="@+id/weather_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_temperature"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/weather_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunny"
            app:layout_constraintBottom_toBottomOf="@+id/tv_temperature"
            app:layout_constraintLeft_toLeftOf="@id/iv_weather"
            app:layout_constraintRight_toRightOf="@+id/iv_weather"
            app:layout_constraintTop_toBottomOf="@id/iv_weather" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>